added some css + readme

--- a/style.css
+++ b/style.css
@@ -1,11 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-/* :root {
-  --font-family: "Roboto", sans serif;
-  --main-bg-color: rgba(0, 0, 0, 0.774);
-  --title-color: violet;
-} */
-
 * {
   font-family: "Roboto", sans serif;
 }
@@ -14,4 +8,19 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+body {
+  display: block;
+  align-items: center;
+  justify-content: center;
+  background-image: url("assets/img/jungle.jpeg");
+}
+
+canvas {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(255, 255, 255, 0.692);
 }
